Add Email, Projects, Technology and Home screens

--- a/web/index.html
+++ b/web/index.html
@@ -9,12 +9,12 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Portfolio">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/resume_icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="resume_icon.png"/>
 
-  <title>Portfolio</title>
+  <title>IvyLeano</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
